--- a/frontend/src/login.html
+++ b/frontend/src/login.html
@@ -47,7 +47,7 @@
 <body>
     <div class="login-form">
         <h2>Login</h2>
-        <form action="/submit-your-login-form" method="post">
+        <form action="/login" method="post">
             <div class="form-control">
                 <label for="username">Username</label>
                 <input type="text" id="username" name="username" required>
